--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15609],[[4,5,6,0,[],[1,16,8121],[],[[7,0,0,[],[1,4419,299],[]],[8,0,0,[],[1,4719,648],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,8136,7472],[],[[12,0,0,[],[1,12372,497],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,48456],[[4,5,6,0,[],[1,7,18497],[],[[7,0,0,[],[1,5177,2615],[]],[8,0,0,[],[1,7792,2024],[]],[9,0,0,[],[1,9816,5581],[]]],[],[3,3,0,0]],[10,11,12,0,[],[1,18504,14150],[],[[7,0,0,[],[1,23414,2614],[]],[13,0,0,[],[1,26028,3553],[]]],[],[2,2,0,0]],[14,15,16,0,[],[1,32654,15802],[],[[7,0,0,[],[1,37683,2612],[]],[17,0,0,[],[1,40295,5082],[]]],[],[2,2,0,0]]],[],[],[7,7,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aarok\\webcounter\\webcounter\\src\\tests","*src/tests","*Increment","*C:\\Users\\aarok\\webcounter\\webcounter\\src\\tests\\increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*C:\\Users\\aarok\\webcounter\\webcounter\\src\\tests\\reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aarok\\webcounter\\src\\tests","*src/tests","*Increment","*C:\\Users\\aarok\\webcounter\\src\\tests\\increment.robot","*src/tests/increment.robot","*Set counter to 0","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*C:\\Users\\aarok\\webcounter\\src\\tests\\reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero","*Set","*C:\\Users\\aarok\\webcounter\\src\\tests\\set.robot","*src/tests/set.robot","*Set counter to 10"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":7,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":3,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":2,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s3","label":"Tests.Set","name":"Set","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1762805076222;
+window.output["baseMillis"] = 1762870231694;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15633;
+window.output["generated"] = 48472;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
